--- a/cyber.html
+++ b/cyber.html
@@ -11,8 +11,8 @@
         const vanta = "vanta.html";
 
         let theme = localStorage.getItem("theme");
-        if (theme === null || theme === "index.html") {
-          theme = cyber;
+        if (theme === null || theme === "cyber.html") {
+          theme = vanta;
           localStorage.setItem("theme", theme);
           return;
         }
@@ -24,8 +24,12 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="https://unpkg.com/aos@2.3.1/dist/aos.css" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;600&display=swap"
+      rel="stylesheet"
+    />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r134/three.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/vanta@latest/dist/vanta.cells.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/vanta@latest/dist/vanta.globe.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
     <style>
       * {
@@ -33,13 +37,14 @@
         padding: 0;
         box-sizing: border-box;
         scroll-behavior: smooth;
-        font-family: "JetBrains Mono", monospace;
+        font-family: "Orbitron", sans-serif;
       }
       body {
-        background: #0f0f0f;
-        color: #dddddd;
+        background: linear-gradient(135deg, #0f0c29, #302b63, #24243e);
+        color: #e0e0e0;
         overflow-x: hidden;
         scroll-snap-type: y mandatory;
+        font-family: "Orbitron", sans-serif;
       }
       section {
         scroll-snap-align: start;
@@ -88,7 +93,7 @@
         color: #bbbbbb;
       }
       .typed-text {
-        color: #63a4ff;
+        color: #00fff7;
         font-size: 1.5rem;
         margin-top: 1rem;
         text-align: center;
@@ -104,10 +109,10 @@
         margin-top: 2rem;
       }
       .card {
-        background: rgba(255, 255, 255, 0.05);
+        background: #302b63dd;
         padding: 1.5rem;
         border-radius: 10px;
-        border: 1px solid #333;
+        border: 1px solid #00fff7;
         text-align: left;
       }
       .card:hover {
@@ -128,7 +133,7 @@
       }
       a.button {
         color: #101010;
-        background: #63a4ff;
+        background: #00fff7;
         padding: 0.6rem 1.2rem;
         border-radius: 5px;
         text-decoration: none;
@@ -138,7 +143,7 @@
         transition: background-color 0.3s ease, transform 0.2s ease;
       }
       a.button:hover {
-        background: #3b82f6;
+        background: #00c1ff;
         transform: scale(1.05);
       }
       #background {
@@ -587,7 +592,7 @@
 
       AOS.init({ duration: 1000, once: false });
 
-      VANTA.CELLS({
+      VANTA.GLOBE({
         el: "#background",
         mouseControls: true,
         touchControls: true,
@@ -596,9 +601,10 @@
         minWidth: 200.0,
         scale: 1.0,
         scaleMobile: 1.0,
-        color1: 0x63a4ff,
-        color2: 0x0f0f0f,
-        backgroundColor: 0x0f0f0f,
+        color: 0xff00ff,
+        color2: 0x00ffff,
+        backgroundColor: 0x0f0c29,
+        size: 1.2,
       });
 
       new Typed("#typed", {
