--- a/index.html
+++ b/index.html
@@ -5,615 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Anubhav Jha | SDE Portfolio</title>
     <script>
-      (function () {
-        const ocean = "index.html";
-        const cyber = "cyber.html";
-        const vanta = "vanta.html";
-
-        let theme = localStorage.getItem("theme");
-        if (theme === null || theme === "index.html") {
-          theme = cyber;
-          localStorage.setItem("theme", theme);
-          return;
-        }
-        window.location.href = theme;
-      })();
+      function getRandomInt(min, max) {
+        min = Math.ceil(min);
+        max = Math.floor(max);
+        return Math.floor(Math.random() * (max - min)) + min;
+      }
+      const themes = ["ocean", "cyber", "vanta"];
+      window.location.href = `${themes[getRandomInt(0, themes.length)]}.html`;
     </script>
-    <link
-      href="https://fonts.googleapis.com/css2?family=JetBrains+Mono&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="https://unpkg.com/aos@2.3.1/dist/aos.css" />
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r134/three.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/vanta@latest/dist/vanta.cells.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
-    <style>
-      * {
-        margin: 0;
-        padding: 0;
-        box-sizing: border-box;
-        scroll-behavior: smooth;
-        font-family: "JetBrains Mono", monospace;
-      }
-      body {
-        background: #0f0f0f;
-        color: #dddddd;
-        overflow-x: hidden;
-        scroll-snap-type: y mandatory;
-      }
-      section {
-        scroll-snap-align: start;
-        min-height: 100vh;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        flex-direction: column;
-        position: relative;
-        z-index: 1;
-      }
-      header {
-        position: fixed;
-        top: 0;
-        width: 100%;
-        padding: 1rem 2rem;
-        background: rgba(0, 0, 0, 0.8);
-        z-index: 1000;
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        backdrop-filter: blur(10px);
-      }
-      nav a {
-        color: #bbb;
-        margin: 0 1rem;
-        text-decoration: none;
-        transition: color 0.3s ease;
-      }
-      nav a:hover {
-        color: #1e90ff;
-      }
-      .container {
-        max-width: 1000px;
-        padding: 2rem;
-      }
-      .container h1 {
-        font-size: 3rem;
-        margin-bottom: 1rem;
-        text-align: center;
-      }
-      .container p,
-      .container li {
-        font-size: 1.1rem;
-        line-height: 1.8;
-        color: #bbbbbb;
-      }
-      .typed-text {
-        color: #63a4ff;
-        font-size: 1.5rem;
-        margin-top: 1rem;
-        text-align: center;
-        min-height: 2em;
-      }
-      .typed-cursor {
-        font-size: 1.5rem;
-      }
-      .project-cards {
-        display: grid;
-        grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-        gap: 2rem;
-        margin-top: 2rem;
-      }
-      .card {
-        background: rgba(255, 255, 255, 0.05);
-        padding: 1.5rem;
-        border-radius: 10px;
-        border: 1px solid #333;
-        text-align: left;
-      }
-      .card:hover {
-        outline: 3px solid #00000055;
-      }
-      .card h2 {
-        font-size: 1.5rem;
-        margin-bottom: 0.5rem;
-        color: #63a4ff;
-      }
-      .card p {
-        font-size: 1rem;
-        color: #ccc;
-        margin-bottom: 0.5rem;
-      }
-      .card a.button {
-        margin-top: 1rem;
-      }
-      a.button {
-        color: #101010;
-        background: #63a4ff;
-        padding: 0.6rem 1.2rem;
-        border-radius: 5px;
-        text-decoration: none;
-        margin: 0.2rem;
-        display: inline-block;
-        font-weight: bold;
-        transition: background-color 0.3s ease, transform 0.2s ease;
-      }
-      a.button:hover {
-        background: #3b82f6;
-        transform: scale(1.05);
-      }
-      #background {
-        position: fixed;
-        top: 0;
-        left: 0;
-        width: 100vw;
-        height: 100vh;
-        z-index: 0;
-      }
-      #projects,
-      #skills {
-        padding-top: 32px;
-      }
-      #contact .container {
-        text-align: left;
-      }
-      #contact .container p {
-        color: #ddd;
-      }
-      .mobile-nav-toggle {
-        display: none;
-      }
-      .mobile {
-        display: none;
-      }
-      @media (max-width: 768px) {
-        nav {
-          display: none;
-        }
-        .mobile-nav-toggle {
-          display: block;
-          cursor: pointer;
-          font-size: 1.5rem;
-          color: #63a4ff;
-        }
-        .mobile-nav {
-          position: fixed;
-          top: 0;
-          right: 0;
-          height: 100vh;
-          width: 250px;
-          background: #121212;
-          padding-top: 6rem;
-          padding-left: 1.5rem;
-          display: flex;
-          flex-direction: column;
-          gap: 1.5rem;
-          z-index: 999;
-          transform: translateX(100%);
-          transition: transform 0.3s ease;
-        }
-        .mobile-nav a {
-          color: #bbb;
-          text-decoration: none;
-          font-size: 1.2rem;
-        }
-        .mobile-nav a:hover {
-          color: #1e90ff;
-        }
-        .mobile-nav.active {
-          transform: translateX(0);
-        }
-        .touches {
-          display: none;
-        }
-        .desktop {
-          display: none;
-        }
-        .mobile {
-          display: block;
-        }
-      }
-    </style>
   </head>
-  <body>
-    <div id="background"></div>
-
-    <header>
-      <h2 style="color: #ddd">Anubhav Jha</h2>
-      <div class="mobile-nav-toggle" onclick="toggleMobileNav()">☰</div>
-      <nav>
-        <a href="#about">About</a>
-        <a href="#projects">Projects</a>
-        <a href="#experience">Experience</a>
-        <a href="#skills">Skills</a>
-        <a href="/portfolio/resume.pdf">Resume</a>
-        <a href="#contact">Contact</a>
-      </nav>
-    </header>
-    <div class="mobile-nav" id="mobileNav">
-      <a href="#about" onclick="toggleMobileNav()">About</a>
-      <a href="#projects" onclick="toggleMobileNav()">Projects</a>
-      <a href="#experience" onclick="toggleMobileNav()">Experience</a>
-      <a href="#skills" onclick="toggleMobileNav()">Skills</a>
-      <a href="/portfolio/resume.pdf" onclick="toggleMobileNav()">Resume</a>
-      <a href="#contact" onclick="toggleMobileNav()">Contact</a>
-    </div>
-
-    <section id="about">
-      <div class="container" data-aos="fade-up">
-        <h1>Hi, I'm Anubhav Jha</h1>
-        <div style="width: 100%; text-align: center">
-          <span class="typed-text" id="typed"></span>
-        </div>
-        <p class="desktop">
-          B.Tech. Computer Science @ VIT Chennai | B.S. Data Science @ IIT
-          Madras
-        </p>
-        <p class="mobile" style="text-align: center">
-          B.Tech. Computer Science @ VITC <br />
-          B.S. Data Science @ IITM
-        </p>
-      </div>
-    </section>
-
-    <section id="projects">
-      <div class="container">
-        <h1 data-aos="fade-up">Projects</h1>
-        <div class="project-cards">
-          <div class="card" data-aos="zoom-in">
-            <h2>Network Simulator</h2>
-            <p>
-              The Network Simulator is an interactive tool for designing network
-              topologies with drag-and-drop features and real-time visuals. It
-              supports basic connectivity checks for learning and testing.
-            </p>
-            <a
-              href="https://anubhav0807.github.io/NetworkSimulator/"
-              target="_blank"
-              class="button"
-              >Live</a
-            >
-            <a
-              href="https://github.com/Anubhav0807/NetworkSimulator"
-              target="_blank"
-              class="button"
-              >Code</a
-            >
-          </div>
-          <div class="card" data-aos="zoom-in">
-            <h2>Leaf Classifier</h2>
-            <p>
-              Classified 500+ leaf images across 10 species using a two-stage
-              image classification model trained with Teachable Machine. Hosted
-              description API on Vercel using FastAPI.
-            </p>
-            <a
-              href="https://anubhav0807.github.io/LeafClassifier/"
-              target="_blank"
-              class="button"
-              >Live</a
-            >
-            <a
-              href="https://github.com/Anubhav0807/LeafClassifier"
-              target="_blank"
-              class="button"
-              >Code</a
-            >
-          </div>
-          <div class="card" data-aos="zoom-in">
-            <h2>Vehicle Parking System</h2>
-            <p>
-              Multi-user system with booking and tracking of parking spots.
-              Includes admin and user dashboards, built using Flask, SQLite3 and
-              SQLAlchemy.
-            </p>
-            <a
-              href="javascript:alert('Code is currently private.')"
-              class="button"
-              >Code</a
-            >
-          </div>
-          <div class="card" data-aos="zoom-in">
-            <h2>Custom OS Kernel</h2>
-            <p>
-              Built a C++ kernel booted via x86 assembly bootloader. Includes
-              shell, login interface, and video memory manipulation for display
-              output.
-            </p>
-            <a
-              href="https://github.com/Anubhav0807/custom-os-kernel"
-              target="_blank"
-              class="button"
-              >Code</a
-            >
-          </div>
-          <div class="card" data-aos="zoom-in">
-            <h2>Mystery Maze</h2>
-            <p>
-              Java-based puzzle-adventure game using AWT/Swing with AI enemies,
-              destructible walls, and procedurally generated levels. Won
-              Game-A-Thon @ IIT Madras.
-            </p>
-            <a
-              href="https://github.com/Anubhav0807/MysteryMaze"
-              target="_blank"
-              class="button"
-              >Code</a
-            >
-            <a
-              href="https://youtu.be/4V7LL0fEA0Y"
-              target="_blank"
-              class="button"
-              >Demo Video</a
-            >
-          </div>
-          <div class="card" data-aos="zoom-in">
-            <h2>Report Card Generator</h2>
-            <p>
-              Desktop Python app to create styled PDF report cards with themes,
-              dev mode (via secret key combo), and random test data generation.
-            </p>
-            <a
-              href="https://github.com/Anubhav0807/RCG"
-              target="_blank"
-              class="button"
-              >Code</a
-            >
-            <a
-              href="https://youtu.be/AyLbTIjUaYM"
-              target="_blank"
-              class="button"
-              >Demo Video</a
-            >
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <section id="experience">
-      <div class="container" data-aos="fade-up">
-        <h1>Experience</h1>
-        <p>
-          <strong>App Developer</strong> – Hack Club VIT (Sep 2024 – Present)
-        </p>
-        <ul>
-          <li>Built cross-platform app using React Native</li>
-          <li>QR-based location hints and multi-step flows</li>
-          <li>Enabled real-world progression via code scans</li>
-        </ul>
-      </div>
-    </section>
-
-    <section id="skills">
-      <div class="container" data-aos="fade-up">
-        <h1>Technical Skills</h1>
-        <div
-          style="
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-            gap: 1rem;
-          "
-        >
-          <div class="card" data-aos="zoom-in">
-            <h2>Languages</h2>
-            <p>
-              <img
-                src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/python/python-original.svg"
-                width="24"
-              />
-              <img
-                src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/java/java-original.svg"
-                width="24"
-              />
-              <img
-                src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/c/c-original.svg"
-                width="24"
-              />
-              <img
-                src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/cplusplus/cplusplus-original.svg"
-                width="24"
-              />
-              <img
-                src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/csharp/csharp-original.svg"
-                width="24"
-              />
-              <img
-                src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/dart/dart-original.svg"
-                width="24"
-              />
-              <img
-                src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/html5/html5-original.svg"
-                width="24"
-              />
-              <img
-                src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/css3/css3-original.svg"
-                width="24"
-              />
-              <img
-                src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/javascript/javascript-original.svg"
-                width="24"
-              /><br />Python, Java, C/C++, C#, Dart, HTML/CSS, JavaScript
-            </p>
-          </div>
-          <div class="card" data-aos="zoom-in">
-            <h2>Frameworks</h2>
-            <p>
-              <img
-                src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/react/react-original.svg"
-                width="24"
-              />
-              <img
-                src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/vuejs/vuejs-original.svg"
-                width="24"
-              />
-              <img
-                src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/bootstrap/bootstrap-original.svg"
-                width="24"
-              />
-              <img
-                src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/flask/flask-original.svg"
-                width="24"
-              />
-              <img
-                src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/flutter/flutter-original.svg"
-                width="24"
-              /><br />React, Vue, Bootstrap, Flask, Flutter, React Native
-            </p>
-          </div>
-          <div class="card" data-aos="zoom-in">
-            <h2>Tools & Platforms</h2>
-            <p>
-              <img
-                src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/git/git-original.svg"
-                width="24"
-              />
-              <img
-                src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/firebase/firebase-plain.svg"
-                width="24"
-              />
-              <img
-                src="https://img.icons8.com/color/48/000000/supabase.png"
-                width="24"
-              />
-              <img
-                src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/unity/unity-original.svg"
-                width="24"
-              />
-              <img
-                src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/bash/bash-original.svg"
-                width="24"
-              /><br />Git, Firebase, Supabase, Unity, Bash
-            </p>
-          </div>
-          <div class="card" data-aos="zoom-in">
-            <h2>Database & ORMs</h2>
-            <p>
-              <img
-                src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/mysql/mysql-original.svg"
-                width="24"
-              />
-              <img
-                src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/postgresql/postgresql-original.svg"
-                width="24"
-              />
-              <img
-                src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/sqlite/sqlite-original.svg"
-                width="24"
-              /><br />MySQL, PostgreSQL, SQLite3, SQLAlchemy
-            </p>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <section id="contact" class="contact">
-      <div class="container" data-aos="fade-up">
-        <h1>Get in Touch</h1>
-        <div
-          style="
-            display: flex;
-            flex-direction: column;
-            gap: 1.2rem;
-            font-size: 1.1rem;
-          "
-        >
-          <div>
-            <img
-              src="https://img.icons8.com/fluency/24/gmail-new.png"
-              width="20"
-              style="vertical-align: middle; margin-right: 8px"
-            />
-            <strong class="touches">Email:</strong>
-            <a
-              href="mailto:anubhavjha08@gmail.com"
-              style="color: #63a4ff; text-decoration: none"
-              >anubhavjha08@gmail.com</a
-            >
-          </div>
-          <div>
-            <img
-              src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/github/github-original.svg"
-              width="20"
-              style="vertical-align: middle; margin-right: 8px"
-            />
-            <strong class="touches">GitHub:</strong>
-            <a
-              href="https://github.com/Anubhav0807"
-              target="_blank"
-              style="color: #63a4ff; text-decoration: none"
-              >github.com/Anubhav0807</a
-            >
-          </div>
-          <div>
-            <img
-              src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/linkedin/linkedin-original.svg"
-              width="20"
-              style="vertical-align: middle; margin-right: 8px"
-            />
-            <strong class="touches">LinkedIn:</strong>
-            <a
-              href="https://linkedin.com/in/anubhav0807"
-              target="_blank"
-              style="color: #63a4ff; text-decoration: none"
-              >linkedin.com/in/anubhav0807</a
-            >
-          </div>
-          <div>
-            <img
-              src="https://assets.leetcode.com/static_assets/public/icons/favicon-96x96.png"
-              width="20"
-              style="
-                vertical-align: middle;
-                margin-right: 8px;
-                border-radius: 4px;
-              "
-            />
-            <strong class="touches">LeetCode:</strong>
-            <a
-              href="https://leetcode.com/u/Anubhav0807/"
-              target="_blank"
-              style="color: #63a4ff; text-decoration: none"
-              >leetcode.com/u/Anubhav0807</a
-            >
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-    <script>
-      function toggleMobileNav() {
-        document.getElementById("mobileNav").classList.toggle("active");
-      }
-
-      AOS.init({ duration: 1000, once: false });
-
-      VANTA.CELLS({
-        el: "#background",
-        mouseControls: true,
-        touchControls: true,
-        gyroControls: false,
-        minHeight: 200.0,
-        minWidth: 200.0,
-        scale: 1.0,
-        scaleMobile: 1.0,
-        color1: 0x63a4ff,
-        color2: 0x0f0f0f,
-        backgroundColor: 0x0f0f0f,
-      });
-
-      new Typed("#typed", {
-        strings: [
-          "App Developer",
-          "Tech Enthusiast",
-          "Full Stack Developer",
-          "Data Scientist",
-          "Game Developer",
-        ],
-        typeSpeed: 50,
-        backSpeed: 25,
-        backDelay: 1500,
-        loop: true,
-      });
-    </script>
-  </body>
+  <body></body>
 </html>
