--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
         return Math.floor(Math.random() * (max - min)) + min;
       }
       const themes = ["ocean", "cyber", "vanta"];
-      window.location.href = `${themes[getRandomInt(0, themes.length)]}.html`;
+      let theme = themes[getRandomInt(0, themes.length)];
+      localStorage.setItem("theme", theme)
+      window.location.href = `${theme}.html${window.location.hash}`;
     </script>
   </head>
   <body></body>
